--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
       </nav>
 
-      <!-- Container Home  -->
+      <!-- Container - Home  -->
       <div class="background w-screen relative z-[1] h-[calc(100vh-80px)]">
         <div class="w-full h-full absolute bg-black opacity-[.8]">
           <div
@@ -175,7 +175,7 @@
               Timestech Softwares.
             </p>
             <a
-              href="./pages/about.html"
+              href="./pages/about.html" target="_blank"
               class="px-5 text-white py-4 bg-[#28abe4] mt-10 rounded-full"
               >Discover More</a
             >
@@ -328,9 +328,7 @@
               <div class="flex justify-center items-center">
                 <i class="fas fa-laptop-code text-white text-4xl"></i>
               </div>
-              <h3
-                class="text-black font-black font-[DM] text-center mt-4 text-xl lg:text-2xl"
-              >
+              <h3 class="text-black font-black font-[DM] text-center mt-4 text-xl lg:text-2xl">
                 Web Hosting
               </h3>
               <p
@@ -366,6 +364,7 @@
 
         <div class="swiper w-full select-none font-[DM] bg-[#28abe3]">
           <div class="swiper-wrapper w-full">
+            <!-- Feedback 1 -->
             <div
               class="swiper-slide w-full text-white flex justify-center flex-col items-center px-5 py-16"
             >
@@ -390,13 +389,14 @@
                   Operations Manager - Futuristic Trade DMCC
                 </h1>
                 <a
-                  href="https://www.futuristictradedmcc.com/"
+                  href="https://www.futuristictradedmcc.com/" target="_blank"
                   class="bg-black text-[#28abe3] px-4 py-2 mt-5 rounded-full"
                   >Visit Site <i class="ri-arrow-right-up-line"></i
                 ></a>
               </div>
             </div>
 
+            <!-- Feedback 2 -->
             <div
               class="swiper-slide w-full bg-[#28abe3] text-white flex-col flex justify-center items-center px-5 py-16"
             >
@@ -421,13 +421,14 @@
                   Head of Operations - TradeHouse Gold & General Trading LLC
                 </h1>
                 <a
-                  href="https://www.tradehousegold.com/"
+                  href="https://www.tradehousegold.com/" target="_blank"
                   class="bg-black text-[#28abe3] px-4 mt-5 py-2 rounded-full"
                   >Visit Site <i class="ri-arrow-right-up-line"></i
                 ></a>
               </div>
             </div>
 
+            <!-- Feedback 3 -->
             <div
               class="swiper-slide w-full bg-[#28abe3] text-white flex flex-col justify-center items-center px-5 py-16"
             >
@@ -451,19 +452,19 @@
                   Director - Camburg Engineering
                 </h1>
                 <a
-                  href="https://camburg-engineering.com/"
+                  href="https://camburg-engineering.com/" target="_blank"
                   class="bg-black text-[#28abe3] px-4 mt-5 py-2 rounded-full"
                   >Visit Site <i class="ri-arrow-right-up-line"></i
                 ></a>
               </div>
             </div>
+
           </div>
           <div class="swiper-pagination"></div>
         </div>
       </section>
 
       <!-- Contact Us -->
-
       <section id="contact" class="bg-gray-100 py-16">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
           <h2
@@ -599,4 +600,5 @@
     ></script>
     <script type="module" src="main.js"></script>
   </body>
+
 </html>
