--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       property="og:description"
       content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together."
     />
-    <meta property="og:image" content="./public/IT_office.jpg" />
+    <meta property="og:image" content="./public/IT_office.webp" />
     <meta property="og:url" content="https://www.timestech.com" />
     <meta property="og:site_name" content="Timestech" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -27,7 +27,7 @@
       name="twitter:description"
       content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together."
     />
-    <meta name="twitter:image" content="./public/IT_office.jpg" />
+    <meta name="twitter:image" content="./public/IT_office.webp" />
     <link
       rel="preload"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
@@ -45,8 +45,8 @@
       />
     </noscript>
     <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
-    <link rel="preload" href="./public/IT_office.jpg" as="image" />
-    <link rel="preload" href="./public/IT_team.jpg" as="image" />
+    <link rel="preload" href="./public/IT_office.webp" as="image" />
+    <link rel="preload" href="./public/IT_team.webp" as="image" />
     <link rel="stylesheet" href="./dist/output.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
@@ -202,7 +202,7 @@
 
         <!-- Defined Timestech -->
         <div class="w-full mt-10">
-          <img src="./public/IT_team.jpg" alt="office Image" />
+          <img src="./public/IT_team.webp" alt="office Image" />
           <p
             class="w-full text-center text-md italic font-light lg:text-2xl lg:mt-5 opacity-75 mt-4"
           >
