--- a/pages/about.html
+++ b/pages/about.html
@@ -44,8 +44,8 @@
         href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       />
     </noscript>
-    <link rel="preload" href="../public/IT_office.jpg" as="image" />
-    <link rel="preload" href="../public/IT_team.jpg" as="image" />
+    <link rel="preload" href="../public/IT_office.webp" as="image" />
+    <link rel="preload" href="../public/IT_team.webp" as="image" />
     <link rel="stylesheet" href="../dist/output.css" />
     <link rel="stylesheet" href="../style.css" />
   </head>
@@ -207,7 +207,7 @@
 
           <div class="flex items-center justify-center mt-10 lg:w-1/2">
             <img
-              src="../public/IT_team.jpg"
+              src="../public/IT_team.webp"
               alt="Timestech Team"
               class="rounded-lg shadow-lg lg:max-w-[70%]"
             />
