--- a/pages/services.html
+++ b/pages/services.html
@@ -43,7 +43,7 @@
         href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       />
     </noscript>
-    <link rel="preload" href="../public/IT_office.jpg" as="image" />
+    <link rel="preload" href="../public/IT_office.webp" as="image" />
     <link rel="stylesheet" href="../dist/output.css" />
     <link rel="stylesheet" href="../style.css" />
   </head>
