--- a/pages/about.html
+++ b/pages/about.html
@@ -100,26 +100,12 @@
             </div>
 
             <div class="flex md:hidden">
-              <button
-                id="menu-button"
-                class="inline-flex items-center justify-center p-2 rounded-md text-black hover:bg-[#28abe3] focus:outline-none"
-              >
-                <svg
-                  class="h-6 w-6"
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke="currentColor"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    stroke-width="2"
-                    d="M4 6h16M4 12h16m-7 6h7"
-                  />
-                </svg>
-              </button>
+              <input class="hidden" type="checkbox" name="menu" id="menu">
+              <label for="menu">
+                <i id="menu-icon" class="ri-menu-3-line mr-3 text-2xl font-medium"  id="menu-icon"></i>
+              </label>
             </div>
+            
           </div>
         </div>
 
@@ -132,7 +118,7 @@
             >
             <a
               href="./about.html"
-              class="text-black block px-3 py-2 uppercase rounded-md active text-base font-semibold hover:text-white hover:bg-[#28abe3]"
+              class="active block px-3 py-2 uppercase rounded-md active text-base font-semibold hover:text-white hover:bg-[#28abe3]"
               >About</a
             >
             <a
