--- a/pages/contact.html
+++ b/pages/contact.html
@@ -66,27 +66,23 @@
                     </div>
 
                     <div class="flex md:hidden">
-                        <button id="menu-button"
-                            class="inline-flex items-center justify-center p-2 rounded-md text-black hover:bg-[#28abe3] focus:outline-none">
-                            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24"
-                                stroke="currentColor">
-                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-                                    d="M4 6h16M4 12h16m-7 6h7" />
-                            </svg>
-                        </button>
-                    </div>
+                        <input class="hidden" type="checkbox" name="menu" id="menu">
+                        <label for="menu">
+                          <i id="menu-icon" class="ri-menu-3-line mr-3 text-2xl font-medium"  id="menu-icon"></i>
+                        </label>
+                      </div>
                 </div>
             </div>
             <div id="mobile-menu" class="hidden md:hidden">
                 <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 bg-white font-[DM]">
                     <a href="/"
-                        class="text-black block px-3 py-2 uppercase rounded-md text-base active font-semibold hover:bg-[#28abe3]">Home</a>
+                        class="text-black block px-3 py-2 uppercase rounded-md text-base  font-semibold hover:bg-[#28abe3]">Home</a>
                     <a href="./about.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">About</a>
                     <a href="./services.html"
                         class="text-black block px-3 py-2 uppercase rounded-md text-base font-semibold hover:bg-[#28abe3]">Services</a>
                     <a href="./contact.html"
-                        class="text-[#28abe3] block px-3 py-2 uppercase rounded-md text-base font-semibold hover:text-white hover:bg-[#28abe3]">Contact</a>
+                        class="active block px-3 py-2 uppercase rounded-md text-base font-semibold hover:text-white hover:bg-[#28abe3]">Contact</a>
                 </div>
             </div>
         </nav>
@@ -140,16 +136,16 @@
                         <ul class="space-y-4">
                             <li class="flex items-center">
                                 <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM] text-lg">Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
-                                    388530</span>
+                                <span class="font-[DM] text-lg"><a target="_blank" class="text-[#28abe3]" href="https://maps.app.goo.gl/KVQyZbJmHfDh4j627" target="_blank">Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
+                                    388530</a></span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM] text-lg">+91 70411 93995</span>
+                                <span class="font-[DM] text-lg"><a target="_blank" class="text-[#28abe3]" href="https://wa.link/zj9aig">+91 70411 93995</a></span>
                             </li>
                             <li class="flex items-center">
                                 <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                                <span class="font-[DM] text-lg">timestechsoftwares@gmail.com</span>
+                                <span class="font-[DM] text-lg"><a target="_blank" class="text-[#28abe3]" href="mailto:contact@timestechsoftwares.com">contact@timestechsoftwares.com</a></span>
                             </li>
                         </ul>
                         <div class="mt-6 flex justify-center flex-col items-center">
