--- a/pages/about.html
+++ b/pages/about.html
@@ -169,7 +169,7 @@
               Innovating for Tomorrow
             </h3>
 
-            <p class="text-gray-700 text-justify mt-5 text-lg">
+            <p class="text-gray-700 text-justify tracking-normal mt-5 text-lg">
               At Timestech Softwares, we are passionate about leveraging
               technology to solve complex business challenges. With a team of
               skilled professionals and years of industry experience, we deliver
@@ -177,11 +177,13 @@
               clients.
             </p>
 
-            <p class="text-gray-700 mt-5 text-justify text-lg">
+            <p class="text-gray-700 mt-5 text-lg leading-relaxed tracking-normal text-justify" style="word-spacing: 0.25rem">
               Our commitment to excellence and innovation has positioned us as a
-              leading IT company in the U.A.E, Middle East, and U.S. markets. We
-              specialize in a wide range of services including Software
-              Development, Cloud Services, Cybersecurity, and IT Consulting.
+              leading IT company in the U.A.E, Middle East, and U.S. markets.
+              We specialize in a wide range of services including Software
+              Development, Cloud Services, Cybersecurity, and IT Consulting, all
+              designed to help businesses like yours succeed in today's fast-paced
+              digital landscape.
             </p>
 
             <a
@@ -210,13 +212,13 @@
                 Our Mission
               </h3>
               <div class="w-16 h-1 bg-[#28abe3] mb-6"></div>
-              <p class="text-gray-700 mb-4 text-lg text-justify">
+              <p class="text-gray-700 mb-4 text-lg text-justify" style="word-spacing: 0.25rem">
                 At Timestech Softwares, our mission is to empower businesses
                 through innovative technology solutions. We strive to deliver
                 cutting-edge software and IT services that drive efficiency,
                 growth, and success for our clients across the globe.
               </p>
-              <p class="text-gray-700 text-lg text-justify">
+              <p class="text-gray-700 text-lg text-justify" style="word-spacing: 0.25rem">
                 We are committed to fostering long-term partnerships, staying at
                 the forefront of technological advancements, and maintaining the
                 highest standards of quality and customer satisfaction.
@@ -230,15 +232,15 @@
               </h3>
               <div class="w-16 h-1 bg-[#28abe3] mb-6"></div>
 
-              <p class="text-gray-700 text-lg text-justify">
-                Our vision is to be a global leader in IT solutions, recognized
-                for our innovation, expertise, and commitment to excellence. We
-                aim to shape the future of technology by continuously pushing
-                the boundaries of what's possible in software development,
-                expanding our reach to serve diverse markets and industries,
-                nurturing a culture of creativity, collaboration, and continuous
-                learning, and contributing to the digital transformation of
-                businesses worldwide.
+              <p class="text-gray-700 text-lg text-justify" style="word-spacing: 0.25rem">
+                Our vision is to become a world-class provider of IT solutions,
+                celebrated for our dedication to innovation, proficiency, and
+                exceptional service. We endeavor to revolutionize the tech
+                industry by relentlessly expanding the limits of software
+                development, broadening our influence to cater to various
+                markets and sectors, fostering an environment of ingenuity,
+                teamwork, and perpetual learning, and aiding in the digital
+                evolution of enterprises globally.
               </p>
             </div>
           </div>
@@ -260,7 +262,7 @@
               <h3 class="text-xl text-center font-semibold font-[DM] mb-2">
                 Innovative Solutions
               </h3>
-              <p class="text-black text-center text-lg">
+              <p class="text-white opacity-80 text-center text-lg">
                 We stay ahead of the curve, bringing you the latest in
                 technology and methodologies.
               </p>
@@ -270,7 +272,7 @@
               <h3 class="text-xl font-semibold font-[DM] mb-2 text-center">
                 Expert Team
               </h3>
-              <p class="text-black text-center text-lg">
+              <p class="text-white opacity-80 text-center text-lg">
                 Our diverse team of experts ensures top-notch solutions for
                 every project.
               </p>
@@ -280,7 +282,7 @@
               <h3 class="text-xl text-center font-semibold font-[DM] mb-2">
                 Global Reach
               </h3>
-              <p class="text-black text-lg text-center">
+              <p class="text-white opacity-80 text-lg text-center">
                 With a presence in multiple markets, we offer truly global IT
                 solutions.
               </p>
@@ -290,7 +292,7 @@
               <h3 class="text-xl text-center font-semibold font-[DM] mb-2">
                 Happy Customers
               </h3>
-              <p class="text-black text-center text-lg">
+              <p class="text-white opacity-80 text-center text-lg">
                 Join the lot's of satisfied customers who have experienced our
                 exceptional service and quality products. Your happiness is our
                 priority!
