--- a/pages/services.html
+++ b/pages/services.html
@@ -403,7 +403,7 @@
             class="webdev-item bg-white p-6 rounded-lg shadow-lg hover:shadow-xl flex justify-center flex-col items-center transition-shadow duration-300">
             <!-- <i class="ri-lock-line text-4xl text-[#28abe3] mb-4"></i> -->
             <img src="../public/folder.gif" class="w-20" alt="" />
-            <h3 class="text-xl font-semibold mb-2 font-[DM]">
+            <h3 class="text-xl text-center font-semibold mb-2 font-[DM]">
               Typography and Color Palette Selection
             </h3>
             <p class="text-gray-700 text-center text-lg">
