--- a/pages/services.html
+++ b/pages/services.html
@@ -148,6 +148,7 @@
         </div>
       </div>
     </section>
+
     <!-- Web Developement -->
     <section class="py-20 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -241,6 +242,7 @@
         </div>
       </div>
     </section>
+
     <!-- App Developement -->
     <section class="py-20 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -335,6 +337,7 @@
         </div>
       </div>
     </section>
+
     <!-- Logo & Banner Design -->
     <section class="py-20 bg-gray-50">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
@@ -343,7 +346,7 @@
             Logo & Banner Design
           </h2>
           <p
-            class="text-justify g:text-center px-4 sm:w-[60%] md:w-[50%] lg:w-[40%] xl:w-[84%] mt-5 mb-1 text-lg font-light mx-auto">
+            class="text-justify lg:text-center px-4 sm:w-[60%] md:w-[50%] lg:w-[40%] xl:w-[84%] mt-5 mb-1 text-lg font-light mx-auto">
             We craft innovative mobile applications that meet your business
             needs, using the latest technologies to deliver scalable, secure,
             and user-friendly apps that drive engagement and revenue.
@@ -427,78 +430,8 @@
         </div>
       </div>
     </section>
-    <!-- Contact Us Form -->
-    <section id="contact" class="bg-gray-100 py-16">
-      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
-        <h2 class="text-4xl font-bold text-center text-gray-900 mb-8 font-[DM]">
-          Contact Us
-        </h2>
-        <div class="w-20 h-1 bg-[#28abe3] mx-auto"></div>
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mt-10">
-          <div class="bg-white rounded-lg shadow-md p-6">
-            <h3 class="text-xl font-semibold mb-4 font-[DM]">Get in Touch</h3>
-            <form action="https://formspree.io/f/manywpeq" method="POST">
-              <div class="mb-4">
-                <label for="name" class="block text-gray-700 font-[DM] mb-2">Name</label>
-                <input type="text" id="name" name="name"
-                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                  required />
-              </div>
-              <div class="mb-4">
-                <label for="email" class="block text-gray-700 font-[DM] mb-2">Email</label>
-                <input type="email" id="email" name="email"
-                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                  required />
-              </div>
-              <div class="mb-4">
-                <label for="message" class="block text-gray-700 font-[DM] mb-2">Message</label>
-                <textarea id="message" name="message" rows="4"
-                  class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-[#28abe3]"
-                  required></textarea>
-              </div>
-              <button type="submit"
-                class="bg-[#28abe3] text-white font-[DM] py-2 px-4 rounded-md hover:bg-[#1c8ab3] transition duration-300">
-                Send Message
-              </button>
-            </form>
-          </div>
-          <div class="bg-white rounded-lg shadow-md p-6">
-            <h3 class="text-xl font-semibold mb-4 font-[DM]">
-              Contact Information
-            </h3>
-            <ul class="space-y-4">
-              <li class="flex items-center">
-                <i class="ri-map-pin-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM] text-lg"><a target="_blank" class="text-[#28abe3]" href="https://maps.app.goo.gl/KVQyZbJmHfDh4j627" target="_blank">Shree Raj Residency, Sisva-Valvod Rd, Sisva, Gujarat
-                  388530</a></span>
-              </li>
-              <li class="flex items-center">
-                <i class="ri-phone-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM] text-lg"><a target="_blank" class="text-[#28abe3]" href="https://wa.link/zj9aig">+91 70411 93995</a></span>
-              </li>
-              <li class="flex items-center">
-                <i class="ri-mail-line text-[#28abe3] text-xl mr-3"></i>
-                <span class="font-[DM] text-lg"><a
-                    target="_blank"
-                    class="text-[#28abe3]"
-                    href="mailto:contact@timestechsoftwares.com">contact@timestechsoftwares.com</a></span>
-              </li>
-            </ul>
-            <div class="mt-6 flex justify-center flex-col items-center">
-              <h4 class="text-lg font-semibold mb-2 mt-4 font-[DM]">
-                Follow Us
-              </h4>
-              <div class="flex space-x-4">
-                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-facebook-fill text-2xl"></i></a>
-                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-twitter-fill text-2xl"></i></a>
-                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-linkedin-fill text-2xl"></i></a>
-                <a href="#" class="text-[#28abe3] hover:text-[#1c8ab3]"><i class="ri-instagram-fill text-2xl"></i></a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+
+ 
     <!-- Footer Section -->
     <footer class="bg-gray-800 text-white py-6">
       <div class="mx-auto px-4 sm:px-6 lg:px-8">
@@ -513,6 +446,7 @@
         </div>
       </div>
     </footer>
+
   </main>
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
   <script type="module" src="../scripts/services.js"></script>
