--- a/pages/about.html
+++ b/pages/about.html
@@ -69,11 +69,14 @@
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
           <div class="flex justify-between items-center h-full">
             <div class="w-[50%] h-full flex justify-start items-center">
-              <img
+              <a href="/">
+                <img
                 src="../public/logo.png"
                 alt="Timestech Logo"
                 class="w-40 h-full object-contain"
               />
+              </a>
+            
             </div>
 
             <div class="hidden md:flex space-x-10">
@@ -310,7 +313,7 @@
               <p>
                 &copy; Copyright 2024. All Rights Reserved to Futuristic Trade
                 DMCC | Design and Developed by
-                <a href="/timestech" class="text-[#28abe4]"
+                <a href="/" class="text-[#28abe4]"
                   >Timestech Softwares</a
                 >
               </p>
