--- a/pages/services.html
+++ b/pages/services.html
@@ -46,7 +46,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
         <div class="flex justify-between items-center h-full">
           <div class="w-[50%] h-full flex justify-start items-center">
-            <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain" />
+           <a href="/"> <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain" /></a>
           </div>
 
           <div class="hidden md:flex space-x-10">
@@ -417,7 +417,9 @@
           <div
             class="webdev-item bg-white p-6 rounded-lg shadow-lg hover:shadow-xl flex justify-center flex-col items-center transition-shadow duration-300">
             <!-- <i class="ri-line-chart-line text-4xl text-[#28abe3] mb-4"></i> -->
-            <img src="../public/seo.gif" class="w-20" alt="" />
+             <a href="/">
+               <img src="../public/seo.gif" class="w-20" alt="" />
+             </a>
 
             <h3 class="text-xl font-semibold mb-2 font-[DM]">
               Deployment and Maintenance
@@ -440,7 +442,7 @@
             <p>
               &copy; Copyright 2024. All Rights Reserved to Futuristic Trade
               DMCC | Design and Developed by
-              <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a>
+              <a href="/" class="text-[#28abe4]">Timestech Softwares</a>
             </p>
           </div>
         </div>
