--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
         <div class="flex justify-between items-center h-full">
           <div class="w-[50%] h-full flex justify-start items-center">
-            <img src="./public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain" />
+            <a href="/"><img src="./public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain" /></a>
           </div>
 
           <div class="hidden md:flex space-x-10">
@@ -417,7 +417,7 @@
             <p>
               &copy; Copyright 2024. All Rights Reserved to Timestech
               Softwares | Design and Developed by
-              <a href="/timestech" class="text-[#28abe4]">Timestech Team</a>
+              <a href="/" class="text-[#28abe4]">Timestech Team</a>
             </p>
           </div>
         </div>
