--- a/pages/contact.html
+++ b/pages/contact.html
@@ -48,9 +48,8 @@
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 h-full">
                 <div class="flex justify-between items-center h-full">
                     <div class="w-[50%] h-full flex justify-start items-center">
-                        <img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain">
+                        <a href="/"><img src="../public/logo.png" alt="Timestech Logo" class="w-40 h-full object-contain"></a>
                     </div>
-
 
                     <div class="hidden md:flex space-x-10">
                         <a href="/" class=" uppercase text-lg font-light font-[DM] hover:text-blue-300">Home</a>
@@ -172,7 +171,7 @@
                 <div class="flex flex-col md:flex-row justify-center items-center">
                     <div class="text-center md:text-left mb-4 md:mb-0">
                         <p>&copy; Copyright 2024. All Rights Reserved to Futuristic Trade DMCC | Design and Developed by
-                            <a href="/timestech" class="text-[#28abe4]">Timestech Softwares</a>
+                            <a href="/" class="text-[#28abe4]">Timestech Softwares</a>
                         </p>
                     </div>
                 </div>
