--- a/index.html
+++ b/index.html
@@ -4,22 +4,18 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Timestech | Home</title>
+  <title>Timestech Softwares</title>
   <meta name="description"
     content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together." />
   <meta name="keywords"
-    content="Timestech, IT Solutions, Software Development, Cloud Services, Cybersecurity, IT Consulting" />
+    content="Timestech, app development, IT Consultancy services, IT Company,  Timestech softwares, Timestech solutions, Website Development. logo designing, Banner Designs,  Digital Marketing, Digital Marketing Services, Digital Marketing Company, Digital Marketing Agency,  IT Solutions, Software Development, Cloud Services, Cybersecurity, IT Consulting" />
   <meta name="author" content="Timestech Team" />
-  <meta property="og:title" content="Timestech | Home" />
+  <meta property="og:title" content="Timestech Softwares" />
   <meta property="og:description"
     content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together." />
   <meta property="og:image" content="./public/IT_office.webp" />
-  <meta property="og:url" content="https://www.timestech.com" />
-  <meta property="og:site_name" content="Timestech" />
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Timestech | Home" />
-  <meta name="twitter:description"
-    content="Welcome to Timestech, your one-stop solution for all IT needs. Explore our services and let's transform your business together." />
+  <meta property="og:url" content="https://www.timestechsoftwares.com" />
+  <meta property="og:site_name" content="Timestech Softwares" />
   <meta name="twitter:image" content="./public/IT_office.webp" />
   <link rel="preload" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" as="style"
     onload="this.rel='stylesheet'" />
@@ -27,6 +23,7 @@
   <noscript>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" />
   </noscript>
+  <!-- Add Favicon -->
   <link rel="shortcut icon" href="./public/favicon.ico" type="image/x-icon" />
   <link rel="preload" href="./public/IT_office.webp" as="image" />
   <link rel="preload" href="./public/IT_team.webp" as="image" />
@@ -37,7 +34,7 @@
 <body class="overflow-x-hidden">
   <!-- Preloader -->
   <div id="preloader" class="bg-white top-0 left-0 z-[30] w-screen h-screen flex justify-center items-center">
-    <img src="./public/loader.gif" alt="" />
+    <img src="./public/loader.gif" alt="Loading" />
   </div>
 
   <!-- Main Section -->
@@ -128,11 +125,11 @@
       <div class="w-full mt-10">
         <img src="./public/IT_team.webp" alt="office Image" />
         <p class="w-full text-center text-md italic font-light lg:text-2xl lg:mt-5 opacity-75 mt-4">
-          "At Timestech Softwares, we specialize in delivering a diversified
+          At Timestech Softwares, we specialize in delivering a diversified
           portfolio of IT solutions, including Software Development, Cloud
           Services, Cybersecurity, and IT Consulting. Our extensive network of
           experts empowers our teams across the U.A.E, Middle East, and U.S.
-          markets."
+          markets.
         </p>
       </div>
 
