--- a/pages/about.html
+++ b/pages/about.html
@@ -14,7 +14,7 @@
       content="Timestech, About Us, IT Solutions, Technology, Innovation"
     />
     <meta name="author" content="Timestech Team" />
-    <meta property="og:title" content="Timestech | About" />
+    <meta property="og:title" content="About Timestech Softwares" />
     <meta
       property="og:description"
       content="Learn more about Timestech, a leading IT solutions provider. Explore our mission, vision, and values."
@@ -24,14 +24,7 @@
       property="og:url"
       content="https://www.timestech.com/pages/about.html"
     />
-    <meta property="og:site_name" content="Timestech" />
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Timestech | About" />
-    <meta
-      name="twitter:description"
-      content="Learn more about Timestech, a leading IT solutions provider. Explore our mission, vision, and values."
-    />
-    <meta name="twitter:image" content="../public/timestech_about.jpg" />
+    <meta property="og:site_name" content="Timestech Softwares" />
     <link
       rel="preload"
       href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
@@ -44,6 +37,7 @@
         href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css"
       />
     </noscript>
+  <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon" />
     <link rel="preload" href="../public/IT_office.webp" as="image" />
     <link rel="preload" href="../public/IT_team.webp" as="image" />
     <link rel="stylesheet" href="../dist/output.css" />
