--- a/pages/services.html
+++ b/pages/services.html
@@ -14,7 +14,7 @@
   <meta property="og:description"
     content="Explore the comprehensive range of IT services offered by Timestech, a leading technology solutions provider." />
   <meta property="og:image" content="../public/timestech_services.jpg" />
-  <meta property="og:url" content="https://www.timestech.com/pages/services.html" />
+  <meta property="og:url" content="https://www.timestechsoftwares.com/pages/services.html" />
   <meta property="og:site_name" content="Timestech" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Timestech | Our Services" />
@@ -26,6 +26,7 @@
   <noscript>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/remixicon@4.3.0/fonts/remixicon.css" />
   </noscript>
+  <link rel="shortcut icon" href="../public/favicon.ico" type="image/x-icon" />
   <link rel="preload" href="../public/IT_office.webp" as="image" />
   <link rel="stylesheet" href="../dist/output.css" />
   <link rel="stylesheet" href="../style.css" />
