--- a/pages/about.html
+++ b/pages/about.html
@@ -305,10 +305,9 @@
           <div class="flex flex-col md:flex-row justify-center items-center">
             <div class="text-center md:text-left mb-4 md:mb-0">
               <p>
-                &copy; Copyright 2024. All Rights Reserved to Futuristic Trade
-                DMCC | Design and Developed by
+                &copy; Copyright 2024. All Rights Reserved to Timestech Softwares | Design and Developed by
                 <a href="/" class="text-[#28abe4]"
-                  >Timestech Softwares</a
+                  >Timestech Team</a
                 >
               </p>
             </div>
