--- a/pages/services.html
+++ b/pages/services.html
@@ -441,8 +441,7 @@
         <div class="flex flex-col md:flex-row justify-center items-center">
           <div class="text-center md:text-left mb-4 md:mb-0">
             <p>
-              &copy; Copyright 2024. All Rights Reserved to Futuristic Trade
-              DMCC | Design and Developed by
+              &copy; Copyright 2024. All Rights Reserved to Timestech Softwares | Design and Developed by
               <a href="/" class="text-[#28abe4]">Timestech Softwares</a>
             </p>
           </div>
